--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,9 @@
 
         <!-- Result section -->
         <div id="result-block">{{result_block}}</div>
+        <p style="text-align:center; margin-top: 1rem; font-size: 0.9rem; color: #888;">
+            Version: {{version}}
+        </p>
     </div>
 </body>
 
